--- a/src/css/core.scss
+++ b/src/css/core.scss
@@ -243,14 +243,14 @@ a {
             }
 
             .ctrl {
-                width: 136px;
+                width: 130px;
                 margin-right: 20px;
 
                 a {
                     color: #363a43;
                     display: inline;
                     font-weight: bold;
-                    margin: 0 5px;
+                    margin: 0 5px 0 0;
                 }
             }
         }
